--- a/src/img/svg/icons.html
+++ b/src/img/svg/icons.html
@@ -159,6 +159,11 @@
     </div>
     
 
+    <div class="icon" style="padding: 10px; outline: 1px solid silver" title="ic_leaf.svg" data-name="ic_leaf">
+        <img src="ic_leaf.svg" style="max-width:200px; margin:10px;" alt="file">
+    </div>
+    
+
     <div class="icon" style="padding: 10px; outline: 1px solid silver" title="ic_list.svg" data-name="ic_list">
         <img src="ic_list.svg" style="max-width:200px; margin:10px;" alt="file">
     </div>
